--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <h1>olvrleb22 project site</h1>
-        <a href="/games/crossy-road.html">crossy road</a>
+        <a href="games/crossy-road.html">crossy road</a>
     </body>
 </html>
